# LangGraph-tutorial

./: .env  .gitignore  README.md  docker-compose.yml  example.txt  main.py  pyproject.toml  script.py
pgdata/: postmaster.pid
pgdata/base/1/: 2619  pg_internal.init
pgdata/base/16384/: 1247  1247_fsm  1249  1249_fsm  1259  1259_fsm  16389  16392  16394  16395  16405  16407  16409  16410  16415  16416  16418  16425  16426  16427  16428  16428_fsm  16435  16436  16438  16445  16446  16447  16448  16449  16450  16470  16472  16481  16491  16494  16516  16529  16536  16544  (+133 more)
pgdata/base/4/: 2619
pgdata/base/5/: pg_internal.init
pgdata/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
pgdata/pg_multixact/members/: 0000
